# ceres-ai-pipeline

./: .dockerignore  .env.example  .gitignore  .rayignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  Sentinel-2 (哨兵二號) 資料庫並建立機器學習訓練流程(初步測試).py  demo.py  docker-compose.yml  main.py  orbital_calculator.py  pyproject.toml  requirements.txt  setup_env.py  start_local_dev.sh  start_services_oauth.sh  小麥生長週期時間軸與小麥鏽病高斯演進模型.py
apps/: __init__.py  api_admin.py  api_auth.py  api_oauth.py  api_runs.py  wheat_risk_webui.py
apps/static/: wheat_risk_webui.css
apps/templates/: change_password.html  login.html  setup.html  wheat_risk_webui.html
branding/: README.md
config/: settings.py
docs/: ARCHITECTURE_V1.md  BRAND_VERIFICATION_CHECKLIST.md  CHANGELOG_2026-04-10_UV_DOCKER_PROFILES.md  DEPLOYMENT_CHECKLIST.md  HANDOFF_2026-05-04.md  OAUTH_PRODUCTION_SETUP.md  OBSERVABILITY_SETUP.md  OPENCODE_VERIFICATION_2026-04-05.md  RISK_REVIEW.md  SPRINT_W1_W2_PLAN.md  USER_GUIDE.md  WHEAT_RISK_PIPELINE.md  release-versioning.md
docs/plans/: 2026-01-30-gee-wheat-rust-risk-pipeline.md  2026-02-13-wheat-risk-staged-training-design.md  2026-02-13-wheat-risk-staged-training-implementation-plan.md  2026-02-13-wheat-risk-webui-planning.md  2026-02-14-refactor-phase2-services.md  2026-02-14-webui-user-oauth.md  2026-03-15-security-runtime-hardening.md  2026-03-15-zarr-dataset-migration.md  2026-03-16-landsat-zarr-risk-roadmap.md  (+5 more)
frontend/: Dockerfile  instrumentation-client.ts  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  sentry-shared.test.js  sentry-shared.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json
modules/: __init__.py  clerk_auth.py  download_progress.py  drive_download.py  drive_oauth.py  ee_import.py  gee_api.py  google_user_oauth.py  merge_geotiffs.py  observability.py  satellite_visualizer.py
scripts/: build_ndvi_forecast_dataset.py  build_npz_dataset_from_geotiffs.py  bump_version.py  demo.py  direct_download_sample.py  download_drive_folder.py  eval_staged_training_matrix.py  export_weekly_feature_rasters.py  export_weekly_risk_rasters.py  export_wheat_patches.py  find_data_on_cluster.py  fix_worker_cuda.ps1  host_dataset_server.py  inspect_data.py  inspect_geotiff_stats.py  inventory_wheat_dates.py  main.py  pack_dataset_tar_zst.py  ray_cluster.py  ray_fanout_cmd.py  ray_train_submit.py  rebuild_index.py  run_staged_training_matrix.py  setup_env.py  train_ndvi_forecast.py  train_wheat_risk_lstm.py  verify_geotiff_band_complement.py
tests/: conftest.py  test_api_oauth.py  test_api_runs.py  test_browser_env.py  test_build_ndvi_forecast_dataset.py  test_build_npz_dates.py  test_build_npz_missing_weeks.py  test_build_npz_workers.py  test_clerk_backend_auth.py  test_clerk_frontend.py  test_dashboard_panel_routes.py  test_data_cache_tar.py  test_data_inventory.py  test_dataset_service_masked.py  test_deployment_env_wiring.py  test_drive_download_filter.py  test_drive_oauth_import_error.py  test_ee_init_requires_project.py  test_experimental_sentinel2_script.py  test_export_weekly_risk_rasters_oauth.py  test_export_wheat_patches_cli.py  test_fakeredis_mode.py  test_fanout_commands.py  test_gee_api_oauth.py  test_google_user_oauth.py  test_inspect_geotiff_stats.py  test_inventory_wheat_dates_cli.py  test_job_oauth_env.py  test_job_worker.py  test_main_process_manager.py  test_merge_geotiffs.py  test_multi_user_oauth.py  test_new_deps_are_importable.py  test_oauth_deps_importable.py  test_observability.py  test_orbital.py  test_ray_cluster_commands.py  test_run_staged_training_matrix_cli.py  test_scripts_run_from_filesystem.py  test_sentry_frontend.py  (+25 more)
utils/: visualization.py
(+83 files in other folders)
