[project]
name = "actinspace-orbital-strategists"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.3.0",
    "earthengine-api>=0.1.384",
    "filelock>=3.16.0",
    "flask>=3.0.0",
    "geemap>=0.30.0",
    "google-auth>=2.25.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "rasterio>=1.4.4",
    "skyfield>=1.46",
    "tqdm>=4.67.2",
    "gunicorn>=22.0.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "rq>=1.16.0",
]

[project.optional-dependencies]
ml = [
    "torch==2.5.1; platform_system == 'Darwin'",
    "torchvision==0.20.1; platform_system == 'Darwin'",
    "torchaudio==2.5.1; platform_system == 'Darwin'",
    "torch==2.5.1+cu121; platform_system != 'Darwin'",
    "torchvision==0.20.1+cu121; platform_system != 'Darwin'",
    "torchaudio==2.5.1+cu121; platform_system != 'Darwin'",
]
distributed = [
    "ray[default]",
    "ray[train]",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.23.0",
    "pytest>=9.0.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torch = [
    { index = "pypi", marker = "platform_system == 'Darwin'" },
    { index = "pytorch-cu121", marker = "platform_system != 'Darwin'" },
]
torchvision = [
    { index = "pypi", marker = "platform_system == 'Darwin'" },
    { index = "pytorch-cu121", marker = "platform_system != 'Darwin'" },
]
torchaudio = [
    { index = "pypi", marker = "platform_system == 'Darwin'" },
    { index = "pytorch-cu121", marker = "platform_system != 'Darwin'" },
]
tqdm = { index = "pypi" }
